2006-12-18       Gaius Mulley <gaius@gnu.org>

	* gm2/www/index.ms:  updated web page to reflect G5 successful
	  make gm2.paranoid using gcc-3.3.6 and CVS
	  tag D2006.06.23.04.00.00
	* gm2/gccgm2.c:  use integer_type_node instead of boolean_type_node
	  as the size of boolean_type_node can differ from the
	  size of an integer_type_node.
	* make gm2.paranoid works on LP64 opteron with a patched gcc-4.1.0

2006-12-17       Gaius Mulley <gaius@gnu.org>

	* fixed line number debugging information at the end of a
	  function.

2006-12-05       Gaius Mulley <gaius@gnu.org>

        * gm2/gm2-compiler/M2Quads.mod:  BuildCastFunction allow arrays
          to be cast.
	* testsuite/gm2/iso/stringchar.mod:  fixed typos.
	* gm2/gm2-compiler/M2Quads.mod:  BuildDynamicArray,
	  BuildStaticArray, BuildDesignatorArray all SkipType to allow
	  type equivalence between arrays.

2006-11-02       Gaius Mulley <gaius@gnu.org>

	* gm2/lang-specs.h:  use gm2cc rather than the gcc driver.
	* gm2/gm2-compiler/gm2lcc.mod:  also use gm2cc rather
	  than gcc.
	* gm2/gm2-compiler/gm2lcc.mod:  corrected extern
	  declaration of exit.
	* gm2/Make-lang.in:  generate gm2cc from xgcc and install
          it correcly.
        * testsuite/gm2/pim/options/optimize/run/pass/gm2.exp: fixed
          library module build.

2006-10-20       Gaius Mulley <gaius@gnu.org>

	* gm2/gccgm2.c:  fixed building of constants strings.
	  Constants are also placed into the global scope so
	  that they are not garbage collected.
	* gm2/M2GenGCC.mod:  CodeXIndr handle special case of
	  null string.
	* gm2/Make-lang.in:  add automatically generated modules
	  to the verify12 rule.
	* added a string assignment regression test.

2006-10-19       Gaius Mulley <gaius@gnu.org>

	* www/index.ms:  updated gm2-harness release to 0.96.
	* gm2/gm2-compiler/SymbolConversion.mod:   Poison must
	  not check for gcc poisoning as it is called after a
	  function has been emitted and potentially poisoned.
