@@ -1,0 +1,46 @@
+(* Copyright (C) 2001, 2002, 2003, 2004, 2005, 2006 Free Software Foundation, Inc. *)
+(* This file is part of GNU Modula-2.
+
+This library is free software; you can redistribute it and/or
+modify it under the terms of the GNU Lesser General Public
+License as published by the Free Software Foundation; either
+version 2.1 of the License, or (at your option) any later version.
+
+This library is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+Lesser General Public License for more details.
+
+You should have received a copy of the GNU Lesser General Public
+License along with this library; if not, write to the Free Software
+Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA *)
+
+DEFINITION MODULE M2RTS ;
+
+(*
+   Author     : Gaius Mulley
+   Title      : M2RTS
+   Date       : Tue Dec 19 21:39:35 GMT 2006
+   Description: Implements smallest number of routines to enable GNU Modula-2
+                to link targetting tiny embedded systems.
+*)
+
+IMPORT SYSTEM ;   (* ensure that SYSTEM always included in the link *)
+EXPORT QUALIFIED HALT, Terminate ;
+
+
+(*
+   HALT - does nothing.
+*)
+
+PROCEDURE HALT ;
+
+
+(*
+   Terminate - does nothing.
+*)
+
+PROCEDURE Terminate ;
+
+
+END M2RTS.
