@@ -1,0 +1,41 @@
+(* Copyright (C) 2006 Free Software Foundation, Inc. *)
+(* This file is part of GNU Modula-2.
+
+This library is free software; you can redistribute it and/or
+modify it under the terms of the GNU Lesser General Public
+License as published by the Free Software Foundation; either
+version 2.1 of the License, or (at your option) any later version.
+
+This library is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+Lesser General Public License for more details.
+
+You should have received a copy of the GNU Lesser General Public
+License along with this library; if not, write to the Free Software
+Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA *)
+
+IMPLEMENTATION MODULE M2RTS ;
+
+IMPORT libc, SYSTEM ;
+
+
+(*
+   Terminate - does nothing.
+*)
+
+PROCEDURE Terminate ;
+BEGIN
+END Terminate ;
+
+
+(*
+   HALT - does nothing.
+*)
+
+PROCEDURE HALT ;
+BEGIN
+END HALT ;
+
+
+END M2RTS.
