@@ -1,0 +1,10 @@
+void abort (void);
+void exit  (int);
+
+void abort (void)
+{
+}
+
+void exit (int i)
+{
+}
